<resources>
    <string name="app_name">Todoapp</string>
    <string name="nav_detail">Your detail</string>
    <string name="nav_about">About</string>
    <string name="nav_user">ian688t6</string>
    <string name="addlist">Add todo list</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="edit">Edit</string>
    <string name="newlist">NewList</string>
    <string name="newtask">Add new task</string>
</resources>
