<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".tasklist.TasklistActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/tasklist_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar
            android:id="@+id/tasklist_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="#6676f978"
            app:contentInsetStart="0dp"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:layout_scrollFlags="scroll|enterAlways|snap">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/app_name"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/tv_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit"
                android:layout_gravity="right"
                android:layout_margin="@dimen/toolbar_horizontal_margin"
                android:focusable="true"
                android:clickable="true"/>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:focusable="true"
        android:focusableInTouchMode="true">
        <ImageView
            android:id="@+id/newtask_img"
            android:layout_margin="@dimen/fab_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_newtask" />
        <EditText
            android:id="@+id/newtask_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/newtask"/>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/tasklist_recycleview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>
